<resources>
    <string name="app_name">Pashuboli</string>
    <string name="you_are_using_for">You are using for</string>
    <string name="user">User</string>
    <string name="associate">Associate</string>
    <string name="merchant">Merchant</string>
    <string name="doctor">Doctor</string>
    <string name="gaushala">Gaushala</string>
    <string name="find_a_cattle">Find A Cattle</string>
    <string name="post_a_cattle">Post A Cattle</string>
    <string name="all_category">ALL CATEGORY</string>
    <string name="view_all">VIEW MORE</string>
    <string name="no_category_available">There is no category available</string>
    <string name="no_user_detail">No user detail available</string>
    <string name="some_problem_occurred">Some problem occurred</string>
    <string name="search">Search Cattle</string>
    <string name="no_breed_available">No breed available</string>
    <string name="select_state">Select State</string>
    <string name="select_category">Select Category</string>
    <string name="select_breed">Select Breed</string>
    <string name="no_state_available">No state available</string>
    <string name="select_district">Select District</string>
    <string name="no_district_available">No district available</string>
    <string name="sort_by">Sort by</string>
    <string name="popular">Popular</string>
    <string name="newest_first">Newest First</string>
    <string name="high_to_low">High to Low</string>
    <string name="low_to_high">Low to High</string>
    <string name="select_area">Select Area</string>
    <string name="post_cattle">Post Cattle</string>
    <string name="negotiable">Negotiable</string>
    <string name="specification">Specification</string>
    <string name="eob">EOB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_username">please enter username</string>
    <string name="enter_mobile_no">Please enter mobile no</string>
    <string name="enter_pass">Please enter password</string>
    <string name="enter_cnf_pass">Please enter confirm password</string>
    <string name="enter_valid_mob_no">enter valid mobile no</string>
    <string name="pass_does_nt_match">password does not match</string>
    <string name="login_first">Please login first</string>
    <string name="invalid_credentials">Invalid Credential</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="my_post">My Post</string>
    <string name="profile_upgrade">Profile Upgrade</string>
    <string name="profile_update">Profile Update</string>
    <string name="bidding_history">Bidding History</string>
    <string name="notifications">Notifications</string>
    <string name="offers">Offers</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_detail_found">No detail found</string>
    <string name="item_code">Item Code</string>
    <string name="no_specification">no specification found</string>
    <string name="bid">BID</string>
    <string name="enter_price_to_bid">Enter price to Bid</string>
    <string name="profile_for_assosiate">Profile for Assosiate</string>
    <string name="reference_by">Reference by</string>
    <string name="alternate_contact_no">Alternate Contact No.</string>
    <string name="facebook_id">Facebook Id</string>
    <string name="upload_adhar_card">Upload Adhar Card</string>
    <string name="upload_pan_card">Upload PAN Card</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="submit">Submit</string>
    <string name="profile_for_doctor">Profile For Doctor</string>
    <string name="update">Update</string>
    <string name="email_id">Email id</string>
    <string name="address">Address</string>
    <string name="father_name">Father Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_price">enter price</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_number_to_reset_password">Enter your number to reset password</string>
    <string name="enter_new_password_for_login">Enter new password for login</string>
    <string name="enter_first_name">please enter first name</string>
    <string name="enter_father_name">enter father name</string>
    <string name="image_select_again">Something went wrong, please select again</string>
    <string name="please_login_first">please login first</string>
    <string name="select_type_of_doc">please select type of doctor</string>
    <string name="select_exp">please select experience</string>
    <string name="select_qualification">please select qualification</string>
    <string name="enter_clinical_address">enter clinical address</string>
    <string name="enter_refernce_by">enter reference by</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_alert">Do you really want to sign out?</string>
    <string name="cattle_query">Cattle Query</string>
    <string name="all">All</string>
    <string name="enter_address">enter address</string>
    <string name="upload_photo_alert">upload photo of animal</string>
    <string name="bidder_list">Bidder List</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="select_bidder_alert">Please select at least one bidder</string>
    <string name="notification">Notifications</string>
    <string name="total_request">Total Request</string>
    <string name="animal_category">Animal Category:</string>
    <string name="status">Status:</string>
    <string name="action">Action:</string>
    <string name="doctor_search">Doctor Search</string>
    <string name="cattle_request">Cattle Request</string>
    <string name="select_reason">Select Reason</string>
    <string name="no_reason_available">No Reason Available</string>
    <string name="cattle_req">Cattle Request</string>
    <string name="user_request">User Request</string>
    <string name="eob_detail">EOB Detail</string>
    <string name="eob_request">EOB Request</string>
    <string name="doctor_request">Doctor Request</string>
    <string name="click_to_view">click to view</string>
    <string name="pan_card">Pan Card:</string>
    <string name="phone_no">Phone No.:</string>
    <string name="reference">Reference By:</string>
    <string name="business_name">Business Name:</string>
    <string name="facebook_id_label">Facebook Id:</string>
    <string name="click_to_view_adhar_card">click to view adhar card</string>
    <string name="deatil_label">Doctor Detail</string>
    <string name="verify">Verify</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="doctor_type">Doctor Type:</string>
    <string name="gaushala_search">Gaushala Search</string>
    <string name="address_label">Address:</string>
    <string name="photo">Photo</string>
    <string name="comment">Comment</string>
    <string name="find_eob">Find EOB</string>
    <string name="my_account">My Account</string>
</resources>

