<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_border"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/requaetDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="i have tow baffalows and one cow and I want to milk them " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_category"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/catName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Cow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="  Close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Yes" />
    </LinearLayout>
</LinearLayout>
