<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_using_for"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/associate_lay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_associate"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/associate" />

                        <TextView
                            android:id="@+id/txt_associate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/associate"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/merchant_lay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_merchant"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/merchant" />

                        <TextView
                            android:id="@+id/txt_merchant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/merchant"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/doctor_lay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_doctor"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/doctor" />

                        <TextView
                            android:id="@+id/txt_doctor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/doctor"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/eob_lay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_user"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/eob" />

                        <TextView
                            android:id="@+id/txt_eob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/eob"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gaushala_lay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_gaushala"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/gaushala" />

                        <TextView
                            android:id="@+id/txt_gaushala"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/gaushala"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@drawable/cattle_bg"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:id="@+id/find_cattle_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/find_a_cattle"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/post_cattle_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/post_a_cattle"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/post_cattle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_category"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:visibility="gone"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
