<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbar"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="right"
            android:src="@drawable/cancel" />

        <TextView
            android:id="@+id/headingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_price_to_bid"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bid_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/bid_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/actionbar"
                android:hint="@string/enter_price"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/home_rectangle_border"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="5dp"
            android:text="@string/bid"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
