<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/dismiss"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right"
            android:src="@drawable/cancel" />

        <ImageView
            android:id="@+id/gaushalaImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/cow"
            android:visibility="gone" />

        <TextView
            android:id="@+id/uploadPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_border"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/photo" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_border"
            android:gravity="left"
            android:hint="@string/comment"
            android:lines="3"
            android:padding="5dp" />

        <TextView
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/home_rectangle_border"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp"
            android:text="@string/submit" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</android.support.v7.widget.CardView>

